(master) Update Testimonials

--- a/data/testimonials/2.yaml
+++ b/data/testimonials/2.yaml
@@ -1,4 +1,4 @@
-name: HARPER CLINTON
-position: CEO Amazon.
+name: Sam Daley-Harris
+position: Fundador de Campaña de Cumbres de Microcrédito
 img: 2.png
-testimony: Demo Stack es para mí una empresa con unas características que la hacen única e indispensable. En programación, diseño y comunicación brillan por su gran profesionalidad y creatividad.
+testimony: Con todas las noticias negativas sobre el clima y el Congreso es comprensible sentirse desalentado, pero la desesperanza no es una estrategia para marcar la diferencia y tampoco está actuando sola. El Lobby del Clima de los Ciudadanos es el antídoto, el eslabón perdido, el Harvard del activismo ciudadano.
