--- a/data/testimonials/3.yaml
+++ b/data/testimonials/3.yaml
@@ -1,4 +1,4 @@
-name: ZOEY HARPER
-position: CEO Hugo.
+name: Dr. James Hansen
+position: Científico del clima y ex jefe del Instituto Goddard de la NASA
 img: 3.png
-testimony: Creativos que supieron captar perfectamente la idea de lo que queríamos hacer. Intuitivos porque con una idea que les trasladamos supieron ampliar y trasladar al trabajo que han desempeñado.
+testimony: Lo más impresionante es el trabajo del Lobby Climático de los Ciudadanos... Si quieres unirte a lalucha por salvar el planeta, para salvar la creación de tus nietos, no hay ningún paso más efectivo que puedas tomar que convertirte en un miembro activo de este grupo .
